doing some responsive staff

--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
         <div class="container cv_wrapper">
             <div class="about_me_section">
               <div class="row">
-                <div class="col-sm-3">
+                <div class="col-lg-3 col-sm-4">
                     <div class="profile img-thumbnail">
-                        <img src="assets/images/mohammad.jpg" alt="Mohammad Sumon" class="img-fluid">
+                        <img src="assets/images/mohammad.jpg" alt="Mohammad Sumon" class="img-fluid" style="width: 100%">
                     </div>
                 </div>
-                <div class="col-sm-5">                    
+                <div class="col-lg-5 col-sm-8 my-sm-0 my-5">                    
                     <h2>I am Sumon</h2>
                     <h4>Web Application Developer</h4>
                     <ul class="personal_info">
                         <li><span>Full Name: </span><span>Mohammad Sumon</span></li>
-                        <li><span>Email: </span><span>sumon@encoderitsolution.net</span></li>
+                        <li><span>Email: </span><span>sumonsbgc@gmail.com</span></li>
                         <li><span>Skype: </span><span>mohammad.sumon01</span></li>
                         <li><span>Phone: </span><span>+880 1516 120 343</span></li>
                         <li><span>Birth Day: </span><span>26-08-1989</span></li>
@@ -51,7 +51,7 @@
                         <li><a href="https://stackoverflow.com/users/3065362/mohammad-sumon"> <i class="fab fa-stack-overflow"></i> </a></li>
                     </ul>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-lg-4 col-12 mt-lg-0 mt-sm-5">
                     <div class="title-block mb-3">
                         <h2 class="title">About Me</h2>
                     </div>
@@ -117,7 +117,7 @@
 
             <div class="work_history">
                 <div class="row">
-                    <div class="col-sm-7">
+                    <div class="col-lg-7 col-sm-12">
                       <div class="row mt-5">
                         <div class="col-sm-12">
                           <div class="title-block mb-3">
@@ -154,7 +154,8 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-sm-5">
+
+                    <div class="col-lg-5 col-sm-12">
                       <div class="row mt-5">
                         <div class="col-sm-12">
                           <div class="title-block mb-3">
@@ -166,7 +167,7 @@
                         <div class="col-sm-12 mb-4">
                           <p class="m-0"><strong>HTML5</strong></p>
                           <div class="progress flex-direction-column">
-                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
+                            <div class="progress-bar progress-bar-striped bg-dark" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
                               aria-valuemax="100">
                             </div>
                           </div>
@@ -174,35 +175,35 @@
                         <div class="col-sm-12 mb-4">
                           <p class="m-0"><strong>CSS3</strong></p>
                           <div class="progress">
-                            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 80%" aria-valuenow="80"
+                            <div class="progress-bar progress-bar-striped bg-secondary" role="progressbar" style="width: 80%" aria-valuenow="80"
                               aria-valuemin="0" aria-valuemax="100"></div>
                           </div>
                         </div>
                         <div class="col-sm-12 mb-4">
                           <p class="m-0"><strong>PHP</strong></p>
                           <div class="progress">
-                            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 70%" aria-valuenow="70"
+                            <div class="progress-bar progress-bar-striped bg-dark" role="progressbar" style="width: 70%" aria-valuenow="70"
                               aria-valuemin="0" aria-valuemax="100"></div>
                           </div>
                         </div>
                         <div class="col-sm-12 mb-4">
                           <p class="m-0"><strong>WordPress</strong></p>
                           <div class="progress">
-                            <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 80%" aria-valuenow="80"
+                            <div class="progress-bar progress-bar-striped bg-secondary" role="progressbar" style="width: 80%" aria-valuenow="80"
                               aria-valuemin="0" aria-valuemax="100"></div>
                           </div>
                         </div>
                         <div class="col-sm-12 mb-4">
                           <p class="m-0"><strong>Laravel</strong></p>
                           <div class="progress">
-                            <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 50%" aria-valuenow="50"
+                            <div class="progress-bar progress-bar-striped bg-dark" role="progressbar" style="width: 75%" aria-valuenow="75"
                               aria-valuemin="0" aria-valuemax="100"></div>
                           </div>
                         </div>
                         <div class="col-sm-12 mb-4">
                           <p class="m-0"><strong>JavaScript</strong></p>
                           <div class="progress">
-                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 65%" aria-valuenow="65"
+                            <div class="progress-bar progress-bar-striped bg-secondary" role="progressbar" style="width: 65%" aria-valuenow="65"
                               aria-valuemin="0" aria-valuemax="100"></div>
                           </div>
                         </div>
@@ -211,7 +212,7 @@
                 </div>
             </div>
 
-            <div class="educational_qualification">
+            <div class="educational_qualification mt-md-0 mt-sm-5">
               <div class="row">
                 <div class="col-sm-12">
                     <div class="title-block mb-3">
@@ -240,7 +241,8 @@
                 </div>
               </div>
             </div>
-            <div class="educational_qualification">
+
+            <div class="educational_qualification mt-md-0 mt-sm-5">
               <div class="row">
                 <div class="col-sm-12">
                     <div class="title-block mb-3">
@@ -272,7 +274,6 @@
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/particles.min.js"></script>
     <script src="assets/js/eis_custom.js"></script>
 </body>
 
